--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -426,7 +426,7 @@
    "id": "14a51798",
    "metadata": {},
    "source": [
-    "### EDA theo GEMINI"
+    "### EDA new"
    ]
   },
   {
@@ -799,9 +799,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "392d818f",
+   "metadata": {},
+   "source": [
+    "### Tìm ra Rule-Based"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8997827e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data...\n",
+      "Number of directories: 95\n",
+      "Number of directories: 1068\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_path = \"/home/thangquang09/CODE/CTAI_MachineLearning/data/fake-or-real-the-impostor-hunt/data/train\"\n",
+    "test_path = \"/home/thangquang09/CODE/CTAI_MachineLearning/data/fake-or-real-the-impostor-hunt/data/test\"\n",
+    "gt_path = \"/home/thangquang09/CODE/CTAI_MachineLearning/data/fake-or-real-the-impostor-hunt/data/train.csv\"\n",
+    "print(\"Loading data...\")\n",
+    "df_train = read_texts_from_dir(train_path)\n",
+    "df_test = read_texts_from_dir(test_path)\n",
+    "df_train_gt = pd.read_csv(gt_path)\n",
+    "y_train = df_train_gt[\"real_text_id\"].values\n",
+    "\n",
+    "df_train['label'] = df_train_gt[\"real_text_id\"]\n",
+    "\n",
+    "df = df_train.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "63f63ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Dữ liệu đã được chuẩn bị để tìm ngưỡng ---\n",
+      "   word_count  sentence_count  ner_count label\n",
+      "0         304               9         19  Real\n",
+      "1         137               4          5  Real\n",
+      "2         159               3          3  Real\n",
+      "3         262               6          4  Real\n",
+      "4         123               4          2  Real\n",
+      "...\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['real_text'] = np.where(df['label'] == 1, df['file_1'], df['file_2'])\n",
+    "df['fake_text'] = np.where(df['label'] == 1, df['file_2'], df['file_1'])\n",
+    "\n",
+    "\n",
+    "def get_word_count(text): return len(str(text).split())\n",
+    "def get_sentence_count(text): return len(nltk.sent_tokenize(str(text)))\n",
+    "def count_entities(text):\n",
+    "    if not nlp: return 0\n",
+    "    doc = nlp(str(text))\n",
+    "    return len(doc.ents)\n",
+    "\n",
+    "# Tạo DataFrame chứa các feature của văn bản REAL\n",
+    "df_real_features = pd.DataFrame({\n",
+    "    'word_count': df['real_text'].apply(get_word_count),\n",
+    "    'sentence_count': df['real_text'].apply(get_sentence_count),\n",
+    "    'ner_count': df['real_text'].apply(count_entities),\n",
+    "    'label': 'Real'\n",
+    "})\n",
+    "\n",
+    "# Tạo DataFrame chứa các feature của văn bản FAKE\n",
+    "df_fake_features = pd.DataFrame({\n",
+    "    'word_count': df['fake_text'].apply(get_word_count),\n",
+    "    'sentence_count': df['fake_text'].apply(get_sentence_count),\n",
+    "    'ner_count': df['fake_text'].apply(count_entities),\n",
+    "    'label': 'Fake'\n",
+    "})\n",
+    "\n",
+    "# Gộp lại thành một DataFrame duy nhất để huấn luyện các Decision Stump\n",
+    "df_for_stumps = pd.concat([df_real_features, df_fake_features], ignore_index=True)\n",
+    "y_stump = df_for_stumps['label']\n",
+    "print(\"--- Dữ liệu đã được chuẩn bị để tìm ngưỡng ---\")\n",
+    "print(df_for_stumps.head())\n",
+    "print(\"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "10b4b48b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bắt đầu tìm ngưỡng tối ưu cho từng feature...\n",
+      "\n",
+      "--- Quy tắc cho 'word_count' ---\n",
+      "|--- word_count <= 412.00\n",
+      "|   |--- class: Real\n",
+      "|--- word_count >  412.00\n",
+      "|   |--- class: Fake\n",
+      "\n",
+      "===> Ngưỡng tối ưu tìm được: 412.0\n",
+      "\n",
+      "--- Quy tắc cho 'sentence_count' ---\n",
+      "|--- sentence_count <= 10.50\n",
+      "|   |--- class: Real\n",
+      "|--- sentence_count >  10.50\n",
+      "|   |--- class: Fake\n",
+      "\n",
+      "===> Ngưỡng tối ưu tìm được: 10.5\n",
+      "\n",
+      "--- Quy tắc cho 'ner_count' ---\n",
+      "|--- ner_count <= 58.00\n",
+      "|   |--- class: Real\n",
+      "|--- ner_count >  58.00\n",
+      "|   |--- class: Fake\n",
+      "\n",
+      "===> Ngưỡng tối ưu tìm được: 58.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier, export_text\n",
+    "\n",
+    "\n",
+    "features_to_find_rules = ['word_count', 'sentence_count', 'ner_count']\n",
+    "optimal_thresholds = {}\n",
+    "\n",
+    "print(\"\\nBắt đầu tìm ngưỡng tối ưu cho từng feature...\\n\")\n",
+    "\n",
+    "for feature in features_to_find_rules:\n",
+    "    X_feature = df_for_stumps[[feature]]\n",
+    "    \n",
+    "    stump_model = DecisionTreeClassifier(max_depth=1, random_state=42)\n",
+    "    stump_model.fit(X_feature, y_stump)\n",
+    "    \n",
+    "    # Trích xuất ngưỡng và quy tắc\n",
+    "    threshold = stump_model.tree_.threshold[0]\n",
+    "    optimal_thresholds[feature] = round(threshold, 2)\n",
+    "    rule_text = export_text(stump_model, feature_names=[feature])\n",
+    "    \n",
+    "    print(f\"--- Quy tắc cho '{feature}' ---\")\n",
+    "    print(rule_text)\n",
+    "    print(f\"===> Ngưỡng tối ưu tìm được: {optimal_thresholds[feature]}\\n\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f63ded",
+   "id": "98398ad4",
    "metadata": {},
    "outputs": [],
    "source": []
