Add markdown cell with link to feature descriptions in ML_Approach notebook

--- a/notebooks/ML_Approach.ipynb
+++ b/notebooks/ML_Approach.ipynb
@@ -82,6 +82,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "157089a6",
+   "metadata": {},
+   "source": [
+    "Có thể đọc mô tả các features ở [đây](../data/README.md#processed-features-information)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "cc02778d",
