Refactor feature extraction and update validation dataset
- Updated `val_statistic_features.csv` to reflect changes in feature extraction, including the removal of specific count features and the addition of binary indicators for script presence.
- Modified `ML_Approach.ipynb` to align with the new feature set, adjusting output shapes and column names accordingly.
- Enhanced `load_data.py` to implement new binary features for multi-script detection and adjusted the calculation of the Type-Token Ratio (TTR).

--- a/notebooks/ML_Approach.ipynb
+++ b/notebooks/ML_Approach.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "562c7a66",
    "metadata": {},
    "outputs": [
@@ -18,29 +18,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape Train: (152, 52)\n",
-      "Shape Validation: (19, 52)\n",
+      "Shape Train: (152, 43)\n",
+      "Shape Validation: (19, 43)\n",
       "Columns Train: Index(['label', 'file1_char_count', 'file1_word_count', 'file1_sentence_count',\n",
       "       'file1_avg_sentence_length', 'file1_english_word_ratio',\n",
-      "       'file1_cyrillic_count', 'file1_arabic_count', 'file1_chinese_count',\n",
-      "       'file1_script_diversity', 'file1_unicode_control_chars',\n",
-      "       'file1_number_count', 'file1_uppercase_word_count',\n",
+      "       'file1_has_non_english_script', 'file1_has_mixed_scripts',\n",
+      "       'file1_unicode_control_chars', 'file1_num_count',\n",
       "       'file1_repetition_score', 'file1_perplexity_score', 'file1_ttr_ratio',\n",
       "       'file2_char_count', 'file2_word_count', 'file2_sentence_count',\n",
       "       'file2_avg_sentence_length', 'file2_english_word_ratio',\n",
-      "       'file2_cyrillic_count', 'file2_arabic_count', 'file2_chinese_count',\n",
-      "       'file2_script_diversity', 'file2_unicode_control_chars',\n",
-      "       'file2_number_count', 'file2_uppercase_word_count',\n",
+      "       'file2_has_non_english_script', 'file2_has_mixed_scripts',\n",
+      "       'file2_unicode_control_chars', 'file2_num_count',\n",
       "       'file2_repetition_score', 'file2_perplexity_score', 'file2_ttr_ratio',\n",
       "       'diff_char_count', 'ratio_char_count', 'diff_word_count',\n",
       "       'ratio_word_count', 'diff_sentence_count', 'ratio_sentence_count',\n",
       "       'diff_avg_sentence_length', 'diff_english_word_ratio',\n",
-      "       'diff_cyrillic_count', 'diff_arabic_count', 'diff_chinese_count',\n",
-      "       'diff_script_diversity', 'diff_unicode_control_chars',\n",
-      "       'diff_number_count', 'diff_uppercase_word_count',\n",
-      "       'diff_repetition_score', 'diff_perplexity_score',\n",
-      "       'ratio_perplexity_score', 'diff_ttr_ratio', 'ratio_ttr_ratio',\n",
-      "       'cosine_sim_word_counts'],\n",
+      "       'diff_has_non_english_script', 'diff_has_mixed_scripts',\n",
+      "       'diff_unicode_control_chars', 'diff_num_count', 'diff_repetition_score',\n",
+      "       'diff_perplexity_score', 'ratio_perplexity_score', 'diff_ttr_ratio',\n",
+      "       'ratio_ttr_ratio', 'cosine_sim_word_counts'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "cc02778d",
    "metadata": {},
    "outputs": [],
@@ -106,6 +102,47 @@
    "metadata": {},
    "source": [
     "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a0e1399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns with all zeros: 0\n",
+      "Zero columns: []\n",
+      "\n",
+      "Columns with >90% zeros:\n",
+      "diff_sentence_count             98.684211\n",
+      "file1_has_mixed_scripts         90.131579\n",
+      "file1_has_non_english_script    90.131579\n",
+      "file2_has_non_english_script    90.131579\n",
+      "file2_has_mixed_scripts         90.131579\n",
+      "diff_has_non_english_script     80.263158\n",
+      "diff_has_mixed_scripts          80.263158\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for columns that contain only zeros\n",
+    "zero_columns = (X_train == 0).all()\n",
+    "zero_column_names = zero_columns[zero_columns].index.tolist()\n",
+    "\n",
+    "print(f\"Number of columns with all zeros: {len(zero_column_names)}\")\n",
+    "print(f\"Zero columns: {zero_column_names}\")\n",
+    "\n",
+    "# Also check the percentage of zeros in each column\n",
+    "zero_percentages = (X_train == 0).mean() * 100\n",
+    "high_zero_columns = zero_percentages[zero_percentages > 70].sort_values(ascending=False)\n",
+    "\n",
+    "print(f\"\\nColumns with >90% zeros:\")\n",
+    "print(high_zero_columns)"
    ]
   },
   {
