--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -177,6 +177,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43a4de98",
+   "metadata": {},
+   "source": [
+    "## Finetune Encoder for task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0305d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from feature_engineering import clean_text\n",
+    "\n",
+    "df_finetune = df_train.copy()\n",
+    "df_finetune['file_1'] = df_finetune['file_1'].apply(clean_text)\n",
+    "df_finetune['file_2'] = df_finetune['file_2'].apply(clean_text)\n",
+    "df_finetune['text'] = '[CLS] ' + df_finetune['file_1'] + \" [SEP] \" + df_finetune['file_2']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1763af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Sử dụng thiết bị:\", device)\n",
+    "model_name = 'Qwen/Qwen3-Embedding-0.6B'\n",
+    "d_model = 1024\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
+    "tokenizer.add_special_tokens({'cls_token': '[CLS]'})\n",
+    "tokenizer.add_special_tokens({'sep_token': '[SEP]'})\n",
+    "encoder = AutoModel.from_pretrained(model_name, trust_remote_code=True).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44098ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import Dataset\n",
+    "finetune_dataset = Dataset.from_pandas(df_finetune[['text', 'label']])\n",
+    "split_datasets = finetune_dataset.train_test_split(test_size=0.2)\n",
+    "train_dataset = split_datasets['train']\n",
+    "val_dataset = split_datasets['test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f69d40a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "max_length = 1024\n",
+    "def tokenizer_fn(example):\n",
+    "    tokenized_inputs = tokenizer(example['text'], padding= 'max_length', truncation= True, return_tensors= 'pt', max_length= max_length).to(device)\n",
+    "    if 'label' in example.keys():\n",
+    "        tokenized_inputs['labels'] = torch.Tensor(example['label']).to(device)\n",
+    "    return tokenized_inputs\n",
+    "\n",
+    "train_dataset = train_dataset.map(tokenizer_fn, batched=True)\n",
+    "val_dataset = val_dataset.map(tokenizer_fn, batched=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb80d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, model_name, d_model, num_label = 2):\n",
+    "        super().__init__()\n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.encoder = AutoModel.from_pretrained(model_name, trust_remote_code=True).to(self.device)\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
+    "        self.d_model = d_model\n",
+    "        self.fc = nn.Linear(d_model, num_label)\n",
+    "\n",
+    "        # setup loss function\n",
+    "        self.loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    def forward(self, input_ids, attention_mask, labels = None ):\n",
+    "        embeddings = self.encoder(input_ids= input_ids, attention_mask= attention_mask).last_hidden_state[:, 0, :]\n",
+    "        logits = self.fc(embeddings)\n",
+    "        loss = None\n",
+    "        if labels is not None:\n",
+    "            loss = self.loss_fn(logits, labels)\n",
+    "            return {\"loss\": loss, \"logits\": logits}\n",
+    "        return {\"logits\": logits}\n",
+    "    def get_embedding(self, text, max_length = 512):\n",
+    "        cleaned_text = clean_text(text)\n",
+    "        inputs = self.tokenizer(cleaned_text, return_tensors=\"pt\", padding='max_length', truncation=True, max_length=max_length).to(self.device)\n",
+    "        with torch.no_grad():\n",
+    "            embeddings = self.encoder(**inputs).last_hidden_state[:, 0, :].cpu().numpy()\n",
+    "        return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "867ac4a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739819d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662868bf",
+   "metadata": {},
+   "source": [
+    "## Prepare Data for classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "c881c62d",
