--- a/notebooks/ML_Approach.ipynb
+++ b/notebooks/ML_Approach.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "2a0e1399",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d289f586",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "890f7300",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "500a4489",
    "metadata": {},
    "outputs": [
@@ -2616,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "398c9cbb",
    "metadata": {},
    "outputs": [
@@ -4290,7 +4290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "91aa4572",
    "metadata": {},
    "outputs": [
@@ -4555,7 +4555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "4e03f547",
    "metadata": {},
    "outputs": [
@@ -6211,6 +6211,231 @@
    "metadata": {},
    "source": [
     "CATBOOST TEST 74%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6eff12d",
+   "metadata": {},
+   "source": [
+    "## Applied Pre-trained Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "fad6813b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "model_name = 'intfloat/multilingual-e5-small'\n",
+    "model = SentenceTransformer(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "5afa32c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_embedding_features(df):\n",
+    "\n",
+    "    # Trích xuất embeddings cho file_1\n",
+    "    emb_f1 = model.encode(df[\"file_1\"].tolist(), show_progress_bar=True)\n",
+    "\n",
+    "    # Trích xuất embeddings cho file_2\n",
+    "    emb_f2 = model.encode(df[\"file_2\"].tolist(), show_progress_bar=True)\n",
+    "\n",
+    "    # 1. Difference features\n",
+    "    emb_diff = emb_f1 - emb_f2\n",
+    "\n",
+    "    # 2. Cosine similarity\n",
+    "    cosine_sim = np.sum(emb_f1 * emb_f2, axis=1) / (\n",
+    "        np.linalg.norm(emb_f1, axis=1) * np.linalg.norm(emb_f2, axis=1) + 1e-8\n",
+    "    )\n",
+    "    cosine_sim = cosine_sim.reshape(-1, 1)\n",
+    "    # 3. Euclidean distance\n",
+    "    euclidean_dist = np.linalg.norm(emb_diff, axis=1, keepdims=True)\n",
+    "    \n",
+    "    embedding_features = np.concatenate([\n",
+    "        emb_f1,\n",
+    "        emb_f2,\n",
+    "        emb_diff,\n",
+    "        cosine_sim,\n",
+    "        euclidean_dist\n",
+    "    ], axis=1)\n",
+    "    \n",
+    "    return embedding_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8d798d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches:   0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 5/5 [00:07<00:00,  1.59s/it]\n",
+      "Batches: 100%|██████████| 5/5 [00:07<00:00,  1.49s/it]\n",
+      "Batches: 100%|██████████| 1/1 [00:01<00:00,  1.19s/it]\n",
+      "Batches: 100%|██████████| 1/1 [00:01<00:00,  1.15s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_embedding_features = extract_embedding_features(train_stat_df)\n",
+    "val_embedding_features = extract_embedding_features(val_stat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb961ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(152, 85)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "dd3c568f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concat features\n",
+    "X_train = np.concatenate([X_train, train_embedding_features], axis=1)\n",
+    "X_val = np.concatenate([X_val, val_embedding_features], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ebae90f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<catboost.core.CatBoostClassifier at 0x763e62fc18a0>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "catboost_model = CatBoostClassifier(iterations=500, learning_rate=0.1, depth=6, verbose=0)\n",
+    "catboost_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "568f9a4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CatBoost with embeddings: Validation Accuracy: 0.8947368421052632\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = catboost_model.predict(X_val)\n",
+    "print(\"CatBoost with embeddings: Validation Accuracy:\", accuracy_score(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "aba9bbb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 34/34 [00:47<00:00,  1.41s/it]\n",
+      "Batches: 100%|██████████| 34/34 [00:47<00:00,  1.39s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_embedding_features = extract_embedding_features(test_stat_df)\n",
+    "X_test = np.concatenate([X_test, test_embedding_features], axis=1)\n",
+    "\n",
+    "y_test_pred = catboost_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d315fd62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Submission saved to /home/thangquang09/CODE/CTAI_MachineLearning/notebooks/submission_catboost_embedding.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "# --- Build submission -------------------------------------------------\n",
+    "submission = pd.DataFrame({\n",
+    "    \"id\": df_test.index,\n",
+    "    \"real_text_id\": y_test_pred.astype(int)\n",
+    "}).sort_values(\"id\")\n",
+    "\n",
+    "save_path = Path(\"submission_catboost_embedding.csv\")\n",
+    "submission.to_csv(save_path, index=False)\n",
+    "print(f\"✅ Submission saved to {save_path.resolve()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2ca4e6a",
+   "metadata": {},
+   "source": [
+    "CATBOOST + EMBEDDING 84%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2279ba9",
+   "metadata": {},
+   "source": [
+    "## MLP Approach"
    ]
   }
  ],
