--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kích thước từ vựng: 9083\n",
+      "Kích thước từ vựng: 9125\n",
       "Index của '<pad>': 0\n",
       "Index của một từ ngẫu nhiên 'hello': 2\n",
       "Index của một từ không có trong từ điển: 2\n"
@@ -28,7 +28,7 @@
    "source": [
     "from build_dataset_dataloader import get_dataset\n",
     "\n",
-    "train_dataset, val_dataset, vocabulary = get_dataset(case=1)"
+    "train_dataset, val_dataset, vocabulary = get_dataset(case=2)"
    ]
   },
   {
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "9083"
+       "9125"
       ]
      },
      "execution_count": 2,
@@ -61,8 +61,8 @@
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=2, shuffle=True)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=2, shuffle=False)"
+    "train_dataloader = DataLoader(train_dataset, batch_size=16, shuffle=True)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=16, shuffle=False)"
    ]
   },
   {
@@ -74,11 +74,21 @@
     {
      "data": {
       "text/plain": [
-       "[tensor([[1069,   13,   26,  ...,    0,    0,    0],\n",
-       "         [2220,  227,    4,  ..., 1376, 1781,  722]]),\n",
-       " tensor([[ 261,   74,   32,  ...,    0,    0,    0],\n",
-       "         [2220,  227,    4,  ...,    0,    0,    0]]),\n",
-       " tensor([1., 1.])]"
+       "[tensor([[2620,    8, 2396,  ...,    0,    0,    0],\n",
+       "         [  26,  329,    4,  ...,    0,    0,    0],\n",
+       "         [  10,   14,    7,  ...,    0,    0,    0],\n",
+       "         ...,\n",
+       "         [   7,  308,   16,  ...,    0,    0,    0],\n",
+       "         [ 421,   81,   48,  ...,    0,    0,    0],\n",
+       "         [   3,   96,  116,  ...,    0,    0,    0]]),\n",
+       " tensor([[   8, 2396,    4,  ...,    0,    0,    0],\n",
+       "         [  26,  329,    4,  ...,  571,  572,  573],\n",
+       "         [   7, 1285, 2626,  ...,  630, 1669,  807],\n",
+       "         ...,\n",
+       "         [6510,  467,  147,  ...,    0,    0,    0],\n",
+       "         [   7,  156, 1941,  ...,    0,    0,    0],\n",
+       "         [   0,    0,    0,  ...,    0,    0,    0]]),\n",
+       " tensor([0., 0., 0., 0., 1., 1., 1., 0., 0., 1., 1., 1., 0., 0., 0., 0.])]"
       ]
      },
      "execution_count": 4,
@@ -130,12 +140,119 @@
    "outputs": [],
    "source": [
     "criterion = nn.BCEWithLogitsLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n"
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=LEARNING_RATE)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "id": "0b671010",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, valid_dataloader, criterion):\n",
+    "    model.eval()\n",
+    "    total_loss = 0\n",
+    "    running_correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for seq1, seq2, labels in valid_dataloader:\n",
+    "            seq1, seq2, labels = seq1.to(device), seq2.to(device), labels.to(device).float()\n",
+    "            outputs = model(seq1, seq2)\n",
+    "            loss = criterion(outputs.squeeze(1), labels)\n",
+    "            total_loss += loss.item()\n",
+    "            \n",
+    "            predicted = (torch.sigmoid(outputs.squeeze(1)) > 0.5).float()\n",
+    "            running_correct += (predicted == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "    accuracy = 100 * running_correct / total\n",
+    "    total_loss = total_loss / total\n",
+    "    return total_loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "553da1c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def train(model, max_epoch, train_dataloader, valid_dataloader, criterion, optimizer, device):\n",
+    "    model.to(device)\n",
+    "    train_losses = []\n",
+    "    train_accuracies = []\n",
+    "    test_losses = []\n",
+    "    test_accuracies = []\n",
+    "\n",
+    "    # callbacks (save best params)\n",
+    "    best_weights = None\n",
+    "    best_test_acc, best_test_loss = -1, float('inf')\n",
+    "\n",
+    "\n",
+    "    for epoch in range(max_epoch):\n",
+    "        model.train()\n",
+    "        running_loss = 0.0\n",
+    "        running_correct = 0   # to track number of correct predictions\n",
+    "        total = 0   \n",
+    "        \n",
+    "        for i, (seq1, seq2, labels) in enumerate(train_dataloader):\n",
+    "            epoch_start_time = time.time()\n",
+    "            \n",
+    "            seq1, seq2, labels = seq1.to(device), seq2.to(device), labels.to(device).float()\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            # Forward\n",
+    "            outputs = model(seq1, seq2)\n",
+    "            loss = criterion(outputs.squeeze(1), labels)\n",
+    "            running_loss += loss.item()\n",
+    "            \n",
+    "            predicted = (torch.sigmoid(outputs.squeeze(1)) > 0.5).float()\n",
+    "            total += labels.size(0)\n",
+    "            running_correct += (predicted == labels).sum().item()\n",
+    "            \n",
+    "            # Backward\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        epoch_accuracy = 100 * running_correct / total\n",
+    "        epoch_loss = running_loss / total\n",
+    "\n",
+    "        test_loss, test_accuracy = evaluate(model, valid_dataloader, criterion)\n",
+    "\n",
+    "        if test_loss < best_test_loss:\n",
+    "            best_test_loss = test_loss\n",
+    "            # best_test_acc = test_accuracy\n",
+    "            best_weights = model.state_dict()\n",
+    "            \n",
+    "        print(\n",
+    "            \"| Epoch {:3d} | Time: {:5.2f}s | Train Accuracy {:8.3f}% | Train Loss {:8.3f} \"\n",
+    "            \"| Valid Accuracy {:8.3f}% | Valid Loss {:8.3f} \".format(\n",
+    "                epoch+1, time.time() - epoch_start_time, epoch_accuracy, epoch_loss, test_accuracy, test_loss\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # save for plot\n",
+    "        train_losses.append(epoch_loss)\n",
+    "        train_accuracies.append(epoch_accuracy)\n",
+    "        test_losses.append(test_loss)\n",
+    "        test_accuracies.append(test_accuracy)\n",
+    "        \n",
+    "    values_dict = {\n",
+    "        \"train_losses\": train_losses,\n",
+    "        \"train_accuracies\": train_accuracies,\n",
+    "        \"test_losses\": test_losses,\n",
+    "        \"test_accuracies\": test_accuracies\n",
+    "    }\n",
+    "\n",
+    "    return values_dict, best_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d99de564",
    "metadata": {},
    "outputs": [
@@ -143,45 +260,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Loss: 0.0093, Accuracy: 0.0068\n"
+      "| Epoch   1 | Time:  0.32s | Train Accuracy   58.068% | Train Loss    0.042 | Valid Accuracy   66.000% | Valid Loss    0.043 \n",
+      "| Epoch   2 | Time:  0.31s | Train Accuracy   60.895% | Train Loss    0.040 | Valid Accuracy   67.000% | Valid Loss    0.042 \n"
      ]
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
-    "model.train()\n",
-    "for epoch in range(NUM_EPOCHS):\n",
-    "    total_loss = 0\n",
-    "    total_correct = 0\n",
-    "    for seq1, seq2, labels in train_dataloader:\n",
-    "        seq1, seq2, labels = seq1.to(device), seq2.to(device), labels.to(device)\n",
+    "model.to(device)\n",
     "\n",
-    "        # 1. Xóa gradient\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        # 2. Forward pass\n",
-    "        outputs = model(seq1, seq2)\n",
-    "\n",
-    "        # 3. Tính loss\n",
-    "        # outputs có shape [batch_size, 1], cần squeeze để thành [batch_size]\n",
-    "        loss = criterion(outputs.squeeze(), labels)\n",
-    "\n",
-    "        # 4. Backward pass\n",
-    "        loss.backward()\n",
-    "\n",
-    "        # 5. Cập nhật trọng số\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        total_loss += loss.item()\n",
-    "        total_correct += outputs.argmax(dim=1).eq(labels).sum().item()\n",
-    "        break\n",
-    "\n",
-    "    avg_loss = total_loss / len(train_dataloader)\n",
-    "    # if (epoch + 1) % 5 == 0:\n",
-    "    print(f'Epoch [{epoch+1}/{NUM_EPOCHS}], Loss: {avg_loss:.4f}, Accuracy: {total_correct / len(train_dataset):.4f}')\n",
-    "    break\n",
-    "\n"
+    "history, best_weights = train(model, 2, train_dataloader, val_dataloader, criterion, optimizer, device)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e52a72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
