--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "c000d919",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/thangquang09/CODE/CTAI_MachineLearning/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /home/thangquang09/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     /home/thangquang09/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kích thước từ vựng: 9125\n",
+      "Kích thước từ vựng: 9083\n",
       "Index của '<pad>': 0\n",
       "Index của một từ ngẫu nhiên 'hello': 2\n",
       "Index của một từ không có trong từ điển: 2\n"
@@ -26,9 +30,9 @@
     }
    ],
    "source": [
-    "from build_dataset_dataloader import get_dataset\n",
+    "from build_dataset_dataloader import get_dataset, text_to_sequence, TextComparisonDataset\n",
     "\n",
-    "train_dataset, val_dataset, vocabulary = get_dataset(case=2)"
+    "train_dataset, val_dataset, vocabulary = get_dataset(case=1)"
    ]
   },
   {
@@ -102,10 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9d26b99c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vocabulary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m NUM_EPOCHS \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m\n\u001b[1;32m      9\u001b[0m LEARNING_RATE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.001\u001b[39m\n\u001b[0;32m---> 10\u001b[0m VOCAB_SIZE \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mvocabulary\u001b[49m)\n\u001b[1;32m     11\u001b[0m SEQ_LENGTH \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m600\u001b[39m\n\u001b[1;32m     13\u001b[0m model \u001b[38;5;241m=\u001b[39m SiameseLSTM(VOCAB_SIZE, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'vocabulary' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -272,9 +288,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de57284e",
+   "metadata": {},
+   "source": [
+    "## Make Submisison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "36e52a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load model from /home/thangquang09/CODE/CTAI_MachineLearning/models/Siamese_LSTM_case2.pth\n",
+    "model = SiameseLSTM(\n",
+    "    vocab_size=9083,\n",
+    "    embedding_dim=EMBEDDING_DIM,\n",
+    "    hidden_dim=HIDDEN_DIM,\n",
+    "    output_dim=OUTPUT_DIM,\n",
+    ")\n",
+    "\n",
+    "model.load_state_dict(torch.load('/home/thangquang09/CODE/CTAI_MachineLearning/models/Siamese_LSTM_case1.pth', map_location='cpu'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e5180f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of directories: 1068\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from load_data import read_texts_from_dir\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "df_test = read_texts_from_dir('/home/thangquang09/CODE/CTAI_MachineLearning/data/fake-or-real-the-impostor-hunt/data/test')\n",
+    "df_test['label'] = 3\n",
+    "\n",
+    "test_dataset = TextComparisonDataset(df_test, vocabulary)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "17064002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "full_predicted = []\n",
+    "\n",
+    "for seq1, seq2, labels in test_dataloader:\n",
+    "    seq1, seq2 = seq1.to(device), seq2.to(device)\n",
+    "    outputs = model(seq1, seq2)\n",
+    "    predicted = (torch.sigmoid(outputs.squeeze(1)) > 0.5).float()\n",
+    "    full_predicted.append(predicted)\n",
+    "\n",
+    "# Concatenate all predictions\n",
+    "full_predicted = torch.cat(full_predicted, dim=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "23a57915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_predicted = full_predicted.cpu().numpy()\n",
+    "full_predicted = full_predicted + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5be2636b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def make_submission(y_pred, file_name):\n",
+    "    submission = pd.DataFrame({\n",
+    "        \"id\": df_test.index,\n",
+    "        \"real_text_id\": y_pred.astype(int)\n",
+    "    }).sort_values(\"id\")\n",
+    "\n",
+    "    save_path = Path(file_name)\n",
+    "    submission.to_csv(save_path, index=False)\n",
+    "    print(f\"✅ Submission saved to {save_path.resolve()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3b51a11d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Submission saved to /home/thangquang09/CODE/CTAI_MachineLearning/src/submission_case1_LSTM.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_submission(full_predicted, 'submission_case1_LSTM.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e52a72",
+   "id": "bac78d9f",
    "metadata": {},
    "outputs": [],
    "source": []
