--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "c000d919",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kích thước từ vựng: 9083\n",
+      "Kích thước từ vựng: 9125\n",
       "Index của '<pad>': 0\n",
       "Index của một từ ngẫu nhiên 'hello': 2\n",
       "Index của một từ không có trong từ điển: 2\n"
@@ -32,7 +32,7 @@
    "source": [
     "from build_dataset_dataloader import get_dataset, text_to_sequence, TextComparisonDataset\n",
     "\n",
-    "train_dataset, val_dataset, vocabulary = get_dataset(case=1)"
+    "train_dataset, val_dataset, vocabulary = get_dataset(case=2)"
    ]
   },
   {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "36e52a72",
    "metadata": {},
    "outputs": [
@@ -307,26 +307,31 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from LSTM import SiameseLSTM\n",
+    "from CONFIG import  *\n",
+    "\n",
     "# load model from /home/thangquang09/CODE/CTAI_MachineLearning/models/Siamese_LSTM_case2.pth\n",
     "model = SiameseLSTM(\n",
-    "    vocab_size=9083,\n",
+    "    vocab_size=len(vocabulary),\n",
     "    embedding_dim=EMBEDDING_DIM,\n",
     "    hidden_dim=HIDDEN_DIM,\n",
     "    output_dim=OUTPUT_DIM,\n",
     ")\n",
     "\n",
-    "model.load_state_dict(torch.load('/home/thangquang09/CODE/CTAI_MachineLearning/models/Siamese_LSTM_case1.pth', map_location='cpu'))\n"
+    "model.load_state_dict(torch.load('/home/thangquang09/CODE/CTAI_MachineLearning/models/Siamese_LSTM_case2.pth', map_location='cpu'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "e5180f25",
    "metadata": {},
    "outputs": [
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "17064002",
    "metadata": {},
    "outputs": [],
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "23a57915",
    "metadata": {},
    "outputs": [],
@@ -383,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "5be2636b",
    "metadata": {},
    "outputs": [],
@@ -404,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "3b51a11d",
    "metadata": {},
    "outputs": [
@@ -412,12 +417,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Submission saved to /home/thangquang09/CODE/CTAI_MachineLearning/src/submission_case1_LSTM.csv\n"
+      "✅ Submission saved to /home/thangquang09/CODE/CTAI_MachineLearning/src/submission_case2_LSTM.csv\n"
      ]
     }
    ],
    "source": [
-    "make_submission(full_predicted, 'submission_case1_LSTM.csv')"
+    "make_submission(full_predicted, 'submission_case2_LSTM.csv')"
    ]
   },
   {
